Fix pipette icon on Safari/iOS

--- a/src/toolbar/toolbar.css
+++ b/src/toolbar/toolbar.css
@@ -166,3 +166,7 @@
 	padding: 0;
 	display: inline-flex;
 }
+
+.color-input-container .pipetteButton > svg {
+	width: 100%;
+}
